--- a/MikeB_Playground.ipynb
+++ b/MikeB_Playground.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "6b4cc993",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,8 @@
     "plt.xlabel(\"Average Salary ($K)\")\n",
     "plt.ylabel(\"Sentiment Score\")\n",
     "plt.title(\"Sentiment vs. Salary\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#testttttt"
    ]
   }
  ],
